# ChangeLog for media-fonts/libertine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/libertine/ChangeLog,v 1.3 2015/02/27 09:34:09 yngwin Exp $

*libertine-5.3.0.20120702-r1 (27 Feb 2015)

  27 Feb 2015; Ben de Groot <yngwin@gentoo.org>
  +libertine-5.3.0.20120702-r1.ebuild, metadata.xml:
  Prefer installing OpenType over TrueType fonts

*libertine-5.3.0.20120702 (22 Feb 2015)

  22 Feb 2015; Ben de Groot <yngwin@gentoo.org>
  +libertine-5.3.0.20120702.ebuild:
  Move from libertine-ttf to libertine. Install OpenType fonts as well (bug
  #406301). Version bump (bug #431430).

  08 Dec 2012; Markus Meier <maekke@gentoo.org>
  libertine-ttf-5.1.3.20110615.ebuild:
  add ~arm, bug #440908

  26 Mar 2012; Brent Baude <ranger@gentoo.org>
  libertine-ttf-5.1.3.20110615.ebuild:
  Marking libertine-ttf-5.1.3.20110615 ~ppc64 for bug 398521

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  libertine-ttf-5.1.3.20110615.ebuild:
  alpha/ia64/sparc stable wrt #405037

  23 Feb 2012; Brent Baude <ranger@gentoo.org>
  libertine-ttf-5.1.3.20110615.ebuild:
  Marking libertine-ttf-5.1.3.20110615 ppc for bug 405037

  20 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libertine-ttf-4.4.1.ebuild,
  libertine-ttf-5.1.3.20110615.ebuild:
  Remove old stable 5.1.3.20110615 wrt bug#405037.

*libertine-ttf-5.1.3.20110615 (20 Jun 2011)

  20 Jun 2011; Peter Volkov <pva@gentoo.org>
  +libertine-ttf-5.1.3.20110615.ebuild:
  Version bump, bug #368991 thank Michael Kefeder for report.

  22 May 2011; Joseph Jezak <josejx@gentoo.org> libertine-ttf-4.7.5.ebuild:
  Marked ppc stable for bug #357777.

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> libertine-ttf-4.7.5.ebuild:
  alpha/ia64/sparc/x86 stable wrt #357777

  09 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  libertine-ttf-4.7.5.ebuild:
  Stable on amd64 wrt bug #357777

*libertine-ttf-4.7.5 (05 Jul 2010)

  05 Jul 2010; Ryan Hill <dirtyepic@gentoo.org>