@@ -4,29 +4,27 @@ Hash: SHA256
 DIST LinLibertineFont-4.7.5-2.tgz 6119255 SHA256 f11ff509b89b060953c8921bcaeab14256999083c2e01c7a23bc1cf1709d1dfa SHA512 5bd694092e17118fd839c9e1ae7ca244f378534db5ab67332b7d02762ed81ee5f296046b8c9c210b927ec36e020d21c006f5a890ba7c77cbba5319384d02d449 WHIRLPOOL 9eae577f6df362da64790a5e130a95cf145360582652b1e3605e6fbb60760cc18b1e7be344d0a6f7ad99123ecc2e8ab83022b1b2a1759f51eb9dcc4551008a61
 DIST LinLibertineOTF_5.3.0_2012_07_02.tgz 3001259 SHA256 3eb84d13e59d390a3f0b15f93bbb590de693dd5f29c4e8083317dbbadf6fb985 SHA512 a441a127fb56413a69de3a435f3c5870b53ef2d3b6c341f7bf14e112f90d698ed2e7f9b002e0fcf951b93fa7f29be229bd796f8679f0b610d06705f02e01a6c7 WHIRLPOOL c03b7ce3f53f2c1fea5010266f05b777505b0e38a7b0ad1d4e7029c465d0552bddf64751fa3d3dd3164d69427d915b2343bc7b4df817c584873c29227927c597
 DIST LinLibertineTTF-5.1.3_2011_06_15.tgz 15783507 SHA256 1a29ef98f6f2d3bf68eca8a946e428b1a63f0e0c90411286b5f1cdacb86f15d8 SHA512 ea95872f1b7aaae94a999675ff446b5bbff36e0ec0c69a3c02719a7a6031f4b3539aae5e09ae5b16f18e250baf42d630f402b30f4b6c54a831c738d47c165e8a WHIRLPOOL 09368735f243cb1da1b3a18a9e50cbde16584166976a2d55a6f8399316c805cade825cf6fad3047e8601336ee7d4f1117539bd2a7b11748e1194d0851b900f81
-DIST LinLibertineTTF_5.3.0_2012_07_02.tgz 3673659 SHA256 24a593a949808d976850131a953c0c0d7a72299531dfbb348191964cc038d75d SHA512 ea9af8d47d22e5f35be65fbae08c7230602a57abe6f39e9a63a5761a69e519fe4e4ac41b878764035fdf8a2c8ee855c0cb9b0077a216d8ba5a2ddf615913e273 WHIRLPOOL 53a15da6e2df077add5e9bc57b123e88606bb59246e6472c2ddf2cfa2e3441baa81b70e48e4b664b2e23d0bfecddf7d1b37f79a6bce323f7dfa46172d0271f5a
 EBUILD libertine-4.7.5.ebuild 732 SHA256 4aad94c8c3ac7da98d56e820de9f8496382008d570b6c9a2ae9afdabce1202f1 SHA512 7c69678c023c6704bec9e5623a4323e27b109ec5dfc41389109ae061e2f4daf997799bdae12e56ea2cc0f178a2c64cd5b2490d87edfb97eab43f497b078ece4c WHIRLPOOL bd2a75ce98ec6a114bbe2d8a617b0caf69af2fc1c96a465c8342e4ed3e31769af8baa486e4910f39eca637b20abffca5df43f30808fbdbb6b4e768f1b0b2c52a
 EBUILD libertine-5.1.3.20110615.ebuild 850 SHA256 9a8e615477eb56211af51829d4739daec56e0a9d348cab078d59be88dcd71f77 SHA512 fc2fa346506220fbed7c2fe072ec732d428d8eb92a92998d833f2f5412a8d0faece767e95ec71c5dcda7424ea75f5cb49158aa6f752f8a0a4ea72659514a01ac WHIRLPOOL 9175027cc3b297352e1e1e2fde66a391e9227ff0a16b35e4ca3ed99192e342e38b87f6fa9ec3f1d3e98a9a6bba632479e2b0a3a8c4fdcd048e9c85a34eb570cc
-EBUILD libertine-5.3.0.20120702-r1.ebuild 1011 SHA256 2caf0fa063b5ef70d7b02749b2754a0443b78f9df790014bcd9657e21ab0e734 SHA512 2445b2329aa1546b3859f6d7a36fe47d3f96eb9a819ab7d8d13a30da03518c6c3358b4f0df76876f6a7d86653c78dfc40f8f87e426d19261c8976e63de90c4e2 WHIRLPOOL 46c6035cd2442a9e76660ad494f4a1f47cf8295f1b2dd07c47d60a78135c289e5c4ebd48b049bb6c922dc5b587c29fc4958d8b4ae9aa1ea07b0f97ee9835505e
-EBUILD libertine-5.3.0.20120702.ebuild 952 SHA256 d358daeb8a1693c9e879ef692b072f483472c17795da9e83717f21a68548a019 SHA512 79eccada8d87bcb788ed844a3752bb5c6d56af8a7d05a761da0f1b51a3462348a686653c190e70f17ec795eece2393034cdf97da02cb46e2e59cf4783228fcc2 WHIRLPOOL f96576ceb333d397eec09c00bad2ab0a6d6ff035273c66f18d9a0f6dec84ac6b603471f32c4c20ec5b275d2074efdb20bcea4731fb0c4d680defee39c0db5989
-MISC ChangeLog 5107 SHA256 846cd69444d497bf10e496d7715e011504f289bd3f0ae6a718cac4dfb3ab4d33 SHA512 180231149afb7945228dfc99df6d22a22d98b1b0518cc0b2d7bd74427992f9ca0a49ec279e06c7487f616b5be8b5c3ceca0142cdf8b32a66a5d7970db9ac356e WHIRLPOOL 4268bba2b4b05d0096df587fb92d064e97422010c4a3ea83d909c386e51c954316085b6149c73ed74cfe314c43f659af0db6f7d6392079e03e8765598bda3ef4
-MISC metadata.xml 257 SHA256 fd2820b931dac0a1b2aca345e74c3e105e7c8ec608abe07469166f3b28a93212 SHA512 2787160d7c3071502a78992457d17e7c3436227124e52d9fb7ee63848b17381b96e299b09c66677c0c10e70883e9b758f510f782bf33d66d9817ad93797e2d78 WHIRLPOOL 0ec5a3330a8ceb16c77efebbda81addd69dfbe03b13bbf34cfd954bc61a2e7a5e2b2577674c5ef669c0818041eecc9a5ce02a24955f1f9000f741db057b918b7
+EBUILD libertine-5.3.0.20120702-r2.ebuild 862 SHA256 3c64eb087bb754831b6d8a4100db03f5b3fa8e7be0e0c87ea26e43d2037d1461 SHA512 e973da2799741a1fd60fde960154e220352ab68f35289978deeea299b600e8d744b4e2a0c8c3ce36c0ced802f41d7512928cfee44d41143e89c1cfadb4247203 WHIRLPOOL d1cdcd4c8844f59c43c9ff70ff6ffc2758d19a5eda43a06033c31529e7569de767d6fba233eddd9039cd5433c009a69f55379d265485c81db2a8d40048898a57
+MISC ChangeLog 5404 SHA256 a9ca6b2202610804286b4ca331a66975dad82e118a59cfe1e4a470837c717203 SHA512 cf0dfd8eabbe1ddb92cbdc4537b7a5d9df9c8767d97267321215e8654b5d3b4449de493122a48901c2caddf16d10b8efb02fa2ae788f9cfbd3e5e1d6e813f603 WHIRLPOOL 16ecc7e07699a296fb6a439658783fcb41fa2f85cc18240c60eadcf94e5e1ef48e506552854981ddf118baca85c4fe9e21717e1760184e80180015e6995344e0
+MISC metadata.xml 160 SHA256 f98af670c6967591fe20a2cf4ef27d68f8b6dfb2799f8a4cc051003f5c95f7c0 SHA512 309b994cd299c4e1e99212e9f531f63773f48b1255b1c5518f5f7c61f245045c579a7854b481c9b7ffdd79f7e71c417bfdd353ed6431903288a40e2e357b19ad WHIRLPOOL fc94ab822cf0a7455b83c600ee9333f3ad6a683f71bb17b33a21dc86d25dafa060192d7576a849668bb3f88b46f3ff7422a4d06830154bd33540a9f7a50bc1d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU8DoWXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVINIiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOYZwP/01SS+B6T9Kdt5/IRSuN7Zqc
-YjrnEtluBIAHFwbCSV3mk7Dm/ESe8FvMWSTKBbsKJRsbV3UaqSUR2Gy9vmKcY1oj
-/u5gZTqheII0R8eHwQ7SKAg0trHWsofkQn3AkshJWwpqWTWOSp2YCD/IfBAkVmsk
-ZcSg8zWqPO/XwESFbsgHpO3sEjt0J9mB3wIIlF+g5KF9AVCfp+aTgok4/nNclPV2
-SmNXSl+4hhTjp8OitpzYfnle9JLaAUE1QfNOi+udXb8RkjKhw8U3zKOKCc0YHuHU
-cCwqQPCYUjjg2z5r6Td7MbPCiviBYxfpKBj5ML72z2ZF0MJjrlDmGbQhv5jFsnT/
-Sd0CNFCeyn+2GfhQ9N+Ye9nvIBBODvhd6GuEsto1/yLvpzXHnJQy0kGmzY+h4mJv
-jn+GZwJp80V4/l4MusbnXkkGgJS4MnAToLpoIGEiAC5y1uqkaT7Km/v3IIpI6ujV
-Ts8I8yVzEtIHxdbHQhpVriZ7jH70CBK7Jl1e6yibCC2JUylD058RSlJDiWRM/zdB
-9o8RQ9kUBrcDZHRs+PEAP7hsEezS0r3QCryHZOusxumoPGmI0u4DEfJRLsJGjF0G
-BGWPT/H++IdLIQLEAmx5veqZxETtkXsa1PRCPle+iK0+yhExeCV8daFXA0y6XCxu
-Q/I65URdzMuoH7YU3aRm
-=4oJV
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFO18UQALuJTAg3opNNc43Wnjo1Da1d
+tVR7U89oKeehFd5St3n5rHfijbvksWSdifLNxyoryuHqxgDK+g/0M4Etq7niT2WF
+5fbjXUr4yOBZxXBtLNI7wvYXM17xI8g2shWva2OT7MXGTqUtSOr6Ej2Yy+xY8TZB
+DcilSNy2sk7Yxx+ztdjdahEcP51vif1I5rSzW+6rFU1+cdgPWB6fvfM3KyWFNqnm
+8VT9a4sV9zn++uWDJds9QlX0bZ4q8Vzzfk7hAR66TsYb1Xkn1TK6/lfesGgiN1Gs
+fTwPFcCRBVk7uo1RMR/ja5b2UqB9amF3R/yKt1H4wl6USw2g4JNy1Bgx97XNaw9F
+bz8aE7kc7nrX9OU94sCpHOGRr6Q0wMkUqz+o076XYlvkJDUD2qncUxKvdq6ipAtW
+QsPT2yoTMxSUfixvwX33A++WWCrBmIGzU55krhy9fEz2BqSv2Dqe1R24rEHcCnda
+vs6zGv5SwbaCbpZTwJHTqaN5TyT5xttvUmfb3FsdArodss8XbhuGVOMYK7LjqfPz
+OFpHM05dyoPfXU+38djfT6S3eSijjfYOP/R398pZHEkP01ubmCbB2rBY2WOVsyyu
+zyQUyuaWxTd5A/g8HKByjPkPiBDK9jBV2mmmBrQzIEeC5pKJmNDmewgO3JGs1FL/
+etnp9DC+0CdPRJpzBGZj
+=BZW5
 -----END PGP SIGNATURE-----
