@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/libertine/libertine-5.3.0.20120702.ebuild,v 1.1 2015/02/22 06:41:41 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/libertine/libertine-5.3.0.20120702-r2.ebuild,v 1.1 2015/04/05 06:11:41 yngwin Exp $
 
 EAPI=5
 inherit font versionator
@@ -8,12 +8,10 @@ inherit font versionator
 MY_DATE=$(get_version_component_range 4)
 MY_PV=$(get_version_component_range 1-3)_${MY_DATE:0:4}_${MY_DATE:4:2}_${MY_DATE:6}
 MY_P_OTF="LinLibertineOTF_${MY_PV}"
-MY_P_TTF="LinLibertineTTF_${MY_PV}"
 
 DESCRIPTION="Fonts from the Linux Libertine Open Fonts Project"
 HOMEPAGE="http://linuxlibertine.org/"
-SRC_URI="mirror://sourceforge/linuxlibertine/${MY_P_OTF}.tgz
-	mirror://sourceforge/linuxlibertine/${MY_P_TTF}.tgz"
+SRC_URI="mirror://sourceforge/linuxlibertine/${MY_P_OTF}.tgz"
 
 LICENSE="|| ( GPL-2-with-font-exception OFL-1.1 )"
 SLOT="0"
@@ -24,5 +22,5 @@ RDEPEND="!<x11-libs/pango-1.20.4"
 
 S="${WORKDIR}"
 FONT_S="${S}"
+FONT_SUFFIX="otf"
 DOCS="Bugs.txt ChangeLog.txt README Readme-TEX.txt"
-FONT_SUFFIX="otf ttf"
