@@ -1,6 +1,13 @@
 # ChangeLog for media-fonts/libertine
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/libertine/ChangeLog,v 1.3 2015/02/27 09:34:09 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/libertine/ChangeLog,v 1.4 2015/04/05 06:11:41 yngwin Exp $
+
+*libertine-5.3.0.20120702-r2 (05 Apr 2015)
+
+  05 Apr 2015; Ben de Groot <yngwin@gentoo.org>
+  +libertine-5.3.0.20120702-r2.ebuild, -libertine-5.3.0.20120702-r1.ebuild,
+  -libertine-5.3.0.20120702.ebuild, metadata.xml:
+  As per current fonts team policy, only install the superior opentype format
 
 *libertine-5.3.0.20120702-r1 (27 Feb 2015)
 
